--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "element-ui": "^2.15.14",
     "less": "4.1.1",
     "less-loader": "7.3.0",
     "style-resources-loader": "1.2.1",
