--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "less-loader": "7.3.0",
     "style-resources-loader": "1.2.1",
     "vue": "^2.6.11",
-    "vue-router": "3.0.1"
+    "vue-router": "3.0.1",
+    "vuex": "3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.10",
