--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@bigbighu/cms-utils": "0.0.1",
+    "axios": "0.19.2",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.14",
     "less": "4.1.1",
     "less-loader": "7.3.0",
+    "requset": "^0.0.1-security",
     "style-resources-loader": "1.2.1",
     "vue": "^2.6.11",
     "vue-router": "3.0.1",
