--- a/package.json
+++ b/package.json
@@ -8,17 +8,24 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@bigbighu/cms-utils": "0.0.1",
-    "axios": "0.19.2",
+    "@bigbighu/cms-utils": "^0.0.1",
+    "@bigbighu/mobili-coffee": "^0.0.1",
+    "@bigbighu/mobili-pizza": "^0.0.1",
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
-    "element-ui": "^2.15.14",
-    "less": "4.1.1",
-    "less-loader": "7.3.0",
-    "requset": "^0.0.1-security",
-    "style-resources-loader": "1.2.1",
+    "dayjs": "^1.10.6",
+    "element-ui": "^2.15.6",
+    "less": "^4.1.1",
+    "less-loader": "^7.3.0",
+    "lodash-es": "^4.17.21",
+    "path-to-regexp": "^3.2.0",
+    "style-resources-loader": "^1.2.1",
     "vue": "^2.6.11",
-    "vue-router": "3.0.1",
-    "vuex": "3.1.1"
+    "vue-qr": "^2.2.1",
+    "vue-quill-editor": "^3.0.6",
+    "vue-router": "^3.0.1",
+    "vuedraggable": "^2.23.2",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.10",
